website/websites/u32/code/spectralnorm.7.python3.log

Fri, 03 Dec 2010 23:46:14 GMT

MAKE:
mv spectralnorm.python3-7.python3 spectralnorm.python3-7.py
/usr/local/src/Python-3.1.2/bin/python3.1 -OO -c "from py_compile import compile; compile('spectralnorm.python3-7.py')"
  File "spectralnorm.python3-7.py", line 31
    def part_A_times_u((split,u)):
                       ^
SyntaxError: invalid syntax

0.05s to complete and log all make actions

COMMAND LINE:
/usr/local/src/Python-3.1.2/bin/python3.1 spectralnorm.python3-7.pyo 500

PROGRAM FAILED 


PROGRAM OUTPUT:

/usr/local/src/Python-3.1.2/bin/python3.1: can't open file 'spectralnorm.python3-7.pyo': [Errno 2] No such file or directory
